logs/bloodconnect_errores.log
2026-05-15 17:41:25 - [ERROR] - Caída inesperada del sistema durante la ejecución: 'FrameDashboard' object has no attribute 'lbl_imagen'
Traceback (most recent call last):
  File "/Users/garay/Documents/BloodConnect/app_gui.py", line 194, in cargar_datos
    self.lbl_imagen.configure(image=ctk_img, text="")
    ^^^^^^^^^^^^^^^
AttributeError: 'FrameDashboard' object has no attribute 'lbl_imagen'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/garay/Documents/BloodConnect/main.py", line 20, in main
    app = VentanaPrincipal()
  File "/Users/garay/Documents/BloodConnect/app_gui.py", line 823, in __init__
    "dash": FrameDashboard(self.contenedor, self.sistema), "don": FrameDonantes(self.contenedor, self.sistema),
            ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/garay/Documents/BloodConnect/app_gui.py", line 81, in __init__
    self.cargar_datos()
    ~~~~~~~~~~~~~~~~~^^
  File "/Users/garay/Documents/BloodConnect/app_gui.py", line 196, in cargar_datos
    self.lbl_imagen.configure(image="", text=f"Error al procesar render: {e}")
    ^^^^^^^^^^^^^^^
AttributeError: 'FrameDashboard' object has no attribute 'lbl_imagen'
2026-05-16 02:45:10 - [ERROR] - Dependencia faltante: CustomTkinter o app_gui.py no encontrado. Detalles: cannot import name 'VentanaLogin' from 'app_gui' (/Users/garay/Documents/BloodConnect/app_gui.py)
2026-05-16 19:20:48 - [ERROR] - Caída inesperada del sistema durante la ejecución: invalid syntax. Perhaps you forgot a comma? (app_gui.py, line 2061)
Traceback (most recent call last):
  File "/Users/garay/Documents/BloodConnect/main.py", line 15, in main
    from app_gui import VentanaLogin
  File "/Users/garay/Documents/BloodConnect/app_gui.py", line 2061
    hover_color="#0d223a"     
                ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
2026-05-16 19:21:08 - [ERROR] - Caída inesperada del sistema durante la ejecución: invalid syntax. Perhaps you forgot a comma? (app_gui.py, line 2061)
Traceback (most recent call last):
  File "/Users/garay/Documents/BloodConnect/main.py", line 15, in main
    from app_gui import VentanaLogin
  File "/Users/garay/Documents/BloodConnect/app_gui.py", line 2061
    hover_color="#0d223a"     
                ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
2026-05-17 21:58:35 - [ERROR] - Dependencia faltante: CustomTkinter o app_gui.py no encontrado. Detalles: No module named 'sistema_bc_ctrl'
